--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,20 +26,26 @@ include_directories(${Boost_INCLUDE_DIRS})
 
 # set location of monero static libraries
 set(MONERO_LIBS_DIR
-        /opt/bitmonero-dev/libs)
+        /opt/monero-dev/libs)
 
 # set location of moneroheaders
 set(MONERO_HEADERS_DIR
-        /opt/bitmonero-dev/headers)
+        /opt/monero-dev/headers)
+
 
 # include monero headers
 include_directories(
         ${MONERO_HEADERS_DIR}/src
         ${MONERO_HEADERS_DIR}/external
+        ${MONERO_HEADERS_DIR}/build
         ${MONERO_HEADERS_DIR}/contrib/epee/include
+        ${MONERO_HEADERS_DIR}/external/easylogging++
         ${MONERO_HEADERS_DIR}/external/db_drivers/liblmdb)
 
-
+if(APPLE)
+    include_directories(/usr/local/opt/openssl/include)
+    link_directories(/usr/local/opt/openssl/lib)
+endif()
 
 # get individual monero static libraries
 # that are needed in this project
@@ -47,32 +53,44 @@ include_directories(
 add_library(common STATIC IMPORTED)
 set_property(TARGET common PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libcommon.a)
 
-
 add_library(blocks STATIC IMPORTED)
 set_property(TARGET blocks PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libblocks.a)
 
-
-add_library(crypto STATIC IMPORTED)
-set_property(TARGET crypto
+add_library(cryptoxmr STATIC IMPORTED)
+set_property(TARGET cryptoxmr
         PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libcrypto.a)
-
 
 add_library(cryptonote_core STATIC IMPORTED)
 set_property(TARGET cryptonote_core
         PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libcryptonote_core.a)
 
-
-add_library(blockchain_db STATIC IMPORTED)
-set_property(TARGET blockchain_db
-        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libblockchain_db.a)
+add_library(cryptonote_protocol STATIC IMPORTED)
+set_property(TARGET cryptonote_protocol
+        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libcryptonote_protocol.a)
 
 add_library(mnemonics STATIC IMPORTED)
 set_property(TARGET mnemonics
         PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libmnemonics.a)
 
+add_library(epee STATIC IMPORTED)
+set_property(TARGET epee
+        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libepee.a)
+
+add_library(blockchain_db STATIC IMPORTED)
+set_property(TARGET blockchain_db
+        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libblockchain_db.a)
+
 add_library(lmdb STATIC IMPORTED)
 set_property(TARGET lmdb
         PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/liblmdb.a)
+
+add_library(ringct STATIC IMPORTED)
+set_property(TARGET ringct
+        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libringct.a)
+
+add_library(wallet STATIC IMPORTED)
+set_property(TARGET wallet
+        PROPERTY IMPORTED_LOCATION ${MONERO_LIBS_DIR}/libwallet.a)
 
 # add src/ subfolder
 add_subdirectory(src/)
@@ -90,13 +108,19 @@ add_executable(${PROJECT_NAME}
 # libraries
 target_link_libraries(${PROJECT_NAME}
         myxrm
+        wallet
         cryptonote_core
-        mnemonics
+        cryptonote_protocol
         blockchain_db
-        crypto
+        cryptoxmr
         blocks
-        common
         lmdb
+        ringct
+        common
+        mnemonics
+        epee
         ${Boost_LIBRARIES}
         pthread
-        unbound)
+        unbound
+        unwind
+        dl)
